@@ -1,3 +1,9 @@
+Development Portal (2017-03-10 shi)
+==============================
+Fix timeline and visual indicators for dates in results data
+Update new css for Print Friendly version
+
+
 Development Portal (2017-03-07 shi)
 ==============================
 Added clear all filters option to search
